Fixed issue with camera on mobile devices

--- a/app/static/css/User/user_selftest_capture.css
+++ b/app/static/css/User/user_selftest_capture.css
@@ -564,7 +564,7 @@ footer{
 }
 
 #root{
-    width: 100%;
+    width: 80%;
     margin-bottom: 20vh;
 }
 
